# sinyal-indobert-predict

./: Dockerfile  predict_service.py  pyproject.toml  requirements.txt  vercel.json
best-indobert-sentiment-onnx/: config.json  model_quantized.onnx  tokenizer_config.json
