[project]
name = "sinyal-indobert-predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.2",
    "onnxruntime==1.27.0",
    "tokenizers==0.22.2",
    "PySastrawi==1.2.1",
    "emoji==2.15.0",
    "numpy",
]

[tool.vercel]
entrypoint = "predict_service:app"
